--- a/Code/qtiplot/MantidQt/CustomInterfaces/inc/ConvertToEnergy.ui
+++ b/Code/qtiplot/MantidQt/CustomInterfaces/inc/ConvertToEnergy.ui
@@ -48,7 +48,7 @@
               <bool>true</bool>
              </property>
              <property name="text" >
-              <string>Instrument File Prefix</string>
+              <string>Instrument</string>
              </property>
             </widget>
            </item>
